update build configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,12 @@
 # org.gradle.parallel=true
 #Tue Oct 10 15:42:33 EDT 2017
 
+org.gradle.jvmargs=-Xmx1536m
+systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=ddjankou
+systemProp.http.proxyPassword=Ngaoundere_2010
+systemProp.https.proxyPassword=Ngaoundere_2010
+systemProp.https.proxyHost=wsnproxy101.chia.state.ma.us
+systemProp.http.proxyHost=wsnproxy101.chia.state.ma.us
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=ddjankou
